--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
 </head>
 <body>
+    <header>
+        musical-rain
+    <nav>
+        <a href="#">головна</a>
+        <a href="#">за рокам</a>
+        <a href="#">жанри</a>
+    </nav>
+    </header>
     <h1>куплет 1</h1>
     <p>Сегодня день особый, светлый, яркий</p>
     <p>Все улыбки, смех, подарки,</p>
